# rust-music-player

./: Cargo.toml  README.md
src/: app.rs  main.rs  ui.rs  update.rs
