[package]
name = "rust-music-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
crossterm = "0.28.1"
log = "0.4.20"
ratatui = "0.29.0"
rodio = "0.20.1"
youtube_dl = "0.10.0"
directories = "6.0.0"
anyhow = "1.0.62"
